--- a/src/output.css
+++ b/src/output.css
@@ -1522,6 +1522,10 @@ video {
     justify-content: space-between;
   }
 
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+
   .sm\:rounded-lg {
     border-radius: 0.5rem;
   }
