--- a/src/output.css
+++ b/src/output.css
@@ -608,6 +608,10 @@ video {
   inset: 0px;
 }
 
+.-bottom-\[20\%\] {
+  bottom: -20%;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -650,30 +654,6 @@ video {
 
 .top-5 {
   top: 1.25rem;
-}
-
-.top-\[670px\] {
-  top: 670px;
-}
-
-.-bottom-\[20\%\] {
-  bottom: -20%;
-}
-
-.-bottom-\[30\%\] {
-  bottom: -30%;
-}
-
-.-bottom-\[15\%\] {
-  bottom: -15%;
-}
-
-.-bottom-\[10\%\] {
-  bottom: -10%;
-}
-
-.-bottom-20 {
-  bottom: -5rem;
 }
 
 .z-10 {
@@ -832,10 +812,6 @@ video {
   height: fit-content;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -894,10 +870,6 @@ video {
 
 .w-\[90\%\] {
   width: 90%;
-}
-
-.w-\[95\%\] {
-  width: 95%;
 }
 
 .w-full {
@@ -1147,11 +1119,6 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1177,11 +1144,6 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 
 .p-1 {
@@ -1263,14 +1225,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
 }
 
 .pt-14 {
@@ -1456,14 +1410,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:left-\[2\%\] {
-    left: 2%;
-  }
-
-  .md\:top-\[570px\] {
-    top: 570px;
-  }
-
   .md\:-bottom-\[10\%\] {
     bottom: -10%;
   }
@@ -1496,8 +1442,8 @@ video {
     width: 33.333333%;
   }
 
-  .md\:w-\[1200px\] {
-    width: 1200px;
+  .md\:w-3\/4 {
+    width: 75%;
   }
 
   .md\:w-\[40\%\] {
@@ -1510,10 +1456,6 @@ video {
 
   .md\:w-\[60\%\] {
     width: 60%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
   }
 
   .md\:grid-cols-2 {
@@ -1536,16 +1478,18 @@ video {
     align-items: center;
   }
 
-  .md\:justify-center {
-    justify-content: center;
-  }
-
   .md\:justify-between {
     justify-content: space-between;
   }
 
   .md\:gap-0 {
     gap: 0px;
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:rounded-lg {
@@ -1557,6 +1501,11 @@ video {
     padding-right: 5rem;
   }
 
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .md\:pl-8 {
     padding-left: 2rem;
   }
@@ -1565,8 +1514,8 @@ video {
     padding-top: 2.5rem;
   }
 
-  .md\:pt-0 {
-    padding-top: 0px;
+  .md\:pt-4 {
+    padding-top: 1rem;
   }
 }
 
