--- a/src/output.css
+++ b/src/output.css
@@ -1409,6 +1409,12 @@ video {
   outline-offset: 2px;
 }
 
+@media (min-width: 740px) {
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 768px) {
   .md\:-bottom-\[10\%\] {
     bottom: -10%;
@@ -1522,5 +1528,9 @@ video {
 @media (min-width: 1024px) {
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
